# rciad

./: 3  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  ray  trace
bui/: CMakeCache.txt  Makefile  cmake_install.cmake  trace
src/: .main.cpp.swp  camera.hpp  hitable.hpp  hitable_list.hpp  main.cpp  ray.hpp  sphere.hpp  vec3.hpp
